# pennydropsolver

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: analysis.ipynb
pennydropsolver/: __init__.py
tests/: test_all.py
